Revision history for Perl extension Alien::wxWidgets.

0.46_01
	- Do not give a warning when installed using WiX
	  (patch by Curtis Jewell).
	- Tentative patch to correctly detect wxWidgets under OpenBSD,
	  based on RT ticket 41678.
	- Under Solaris, use GNU Make to build wxWidgets, and fail if it
	  is not present or can't be detected.

0.46  Sun Nov  8 16:25:02 CET 2009
	- Allow choosing the wxWidgets version to build (defaults to
	  the latest stable release when building from the CPAN shell).
	- Add a build configuration for wxWidgets 2.9.0.
	- On Snow Leopard, build wxCocoa when building wxWidgets 2.9.0
	  with a 64 bit Perl.
	- On Windows, enable the 'portable' option by default (finds the
	  wxWidgets libraries relative to the Alien::wxWidgets installation
	  directory).

0.45  Wed Oct 14 22:54:35 CEST 2009
	- On Snow Leopard, abort wxWidgets build if Perl is 64 bit.
	- On Snow Leopard, force wxWidgets build to be 32 bit.

0.44  Sun Aug  9 12:56:05 CEST 2009
	- Rename all command line options to avoid clashing with
	  Module::Build options.

0.43  Sun May 10 09:46:05 CEST 2009
	- Fix building under recent FreeBSD versions (patch by Cezary Morga).
	- Correctly handle monolithic build on wxWidgets' 2.9.x.
	- Support Cocoa builds for wxWidgets 2.9.x.
	- Fix building wxWidgets when the build path contains spaces.
	- Patch and build wxWidgets 2.8.10.

0.42  Sat Nov  8 00:51:18 CET 2008
	- Add an option for building with Unicode support in interactive
	  configuration (defaults to yes).
	- Use ExtUtils::CBuilder to try to detect non-working
	  (or non-installed) compilers.

0.41  Mon Oct 27 22:22:25 CET 2008
	- Rewrite show_configurations to display a pretty-printed version of
	  the available wxWidgets builds.
	- When load() fails to find a compatible configuration, display a
	  the selection criteria and a list of available configurations.

0.40  Wed Oct 15 20:23:15 CEST 2008
	- Always use Archive::Extract to extract the wxWidgets archive